♻️ refactor(i18n): use Trans component for description with HTML-like markup

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "TOTP QR Decoder",
-    "description": "Decode your authenticator QR codes with {{security}} and {{privacy}}",
+    "description": "Decode your authenticator QR codes with <security>{{security}}</security> and <privacy>{{privacy}}</privacy>",
     "security": "military-grade security",
     "privacy": "zero data transmission"
   },
